updates to API token within filling out confing and fixed heading issue within individual sheets.md
filling out config.md: updated to show changes to where API token can now be found and some slight formatting

individual sheets.md: fixing heading issue for  prerequisite process so it was not showing up in the TOC for headings

extra.css: added small border around the pictures, so users can easily tell where the picture started and where it finished

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -11,6 +11,10 @@ body {
   --cript-color: #6d3eb5;
 }
 
+.screenshot-border {
+  border: black solid 0.1rem;
+}
+
 /* excel row colors */
 .row-1 {
   background-color: #e3eeda;
